# SlicerDWD

./: CMakeLists.txt  README.md
DWD/: CMakeLists.txt  DWD.py
DWD/Resources/UI/: DWD.ui
SlicerDWD/: CMakeLists.txt  SlicerDWD.py
SlicerDWD/Resources/UI/: SlicerDWD.ui
SlicerDWD/SlicerDWDUtils/: __init__.py
docs/: usage.md
